Remove flex wrapper on details page to prevent over-spacing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -104,6 +104,7 @@ footer {
     width: 100%;
     height: 30rem;
     object-fit: cover;
+    overflow: hidden;
 }
 
 .detail-image {
@@ -255,9 +256,9 @@ label:hover~input:checked~label {
         height: 10rem;
     }
 
-
+    /* Prevents wider images from cutting off at side of product card */
     .card-image {
-        width: 90%;
+        width: 85%;
     }
 }
 
